force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Inventory is used to manage warehouse stock activities,order related activities etc</description>
    <label>Inventory</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Inventory Id Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>