force-app/main/default/objects/Inventory__c/fields/Current_OnHand_Qty__c.field-meta.xml
<CustomField>
    <fullName>Current_OnHand_Qty__c</fullName>
    <description>Quantity which is left over after receiving and shipping</description>
    <formula>((OnHand_Qty__c + Receivable_Qty__c ) - Shipment_Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity which is left over after receiving and shipping</inlineHelpText>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>