force-app/main/default/objects/Inventory__c/fields/Dealer_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Product_Price__c</fullName>
    <description>Product Price of Dealer Price Book</description>
    <label>Dealer Product Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>