force-app/main/default/objects/Inventory__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>