force-app/main/default/objects/Inventory__c/fields/Maximum_Qty__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Qty__c</fullName>
    <description>Cross reference field for product maximum quantity</description>
    <formula>Product__r.Max_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Maximum Quantity</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>