force-app/main/default/objects/Inventory__c/fields/Minimum_Qty__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Qty__c</fullName>
    <description>Cross reference field for product minimum quantity</description>
    <formula>Product__r.Min_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Minimum Quantity</inlineHelpText>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>