force-app/main/default/objects/Inventory__c/fields/Next_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Next_Order_Qty__c</fullName>
    <description>For next order quantity,if inventory level product is less than product level stock,then min qty of product*1.30  subtracts with quantity available after receivable and shipping otherwise zero</description>
    <formula>IF( Under_Minimum_Qty__c ,( Minimum_Qty__c *1.30)-Current_OnHand_Qty__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Order Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>