force-app/main/default/objects/Inventory__c/fields/OnHand_Qty__c.field-meta.xml
<CustomField>
    <fullName>OnHand_Qty__c</fullName>
    <inlineHelpText>which is available at warehouse</inlineHelpText>
    <label>Quantity On Hand</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>