force-app/main/default/objects/Inventory__c/fields/Receivable_Qty__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Qty__c</fullName>
    <label>Receivable Receipt</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>