force-app/main/default/objects/Inventory__c/fields/Required_Minimum_Qty__c.field-meta.xml
<CustomField>
    <fullName>Required_Minimum_Qty__c</fullName>
    <formula>IF( Under_Minimum_Qty__c , Product__r.Min_Qty__c -(( OnHand_Qty__c + Receivable_Qty__c ) - Shipment_Quantity__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>