force-app/main/default/objects/Inventory__c/fields/Retailer_Price__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Price__c</fullName>
    <description>Retailer price</description>
    <label>Retailer Product Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>