force-app/main/default/objects/Inventory__c/fields/Retailer_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is retailer price book</description>
    <label>Retailer Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Inventories (Retailer Price Book)</relationshipLabel>
    <relationshipName>Inventories1</relationshipName>
    <type>Lookup</type>
</CustomField>