force-app/main/default/objects/Inventory__c/fields/Shipment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Quantity__c</fullName>
    <inlineHelpText>Enter the Quantity to be Shipped</inlineHelpText>
    <label>Planned Shipments</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>