force-app/main/default/objects/Inventory__c/fields/Under_Minimum_Qty__c.field-meta.xml
<CustomField>
    <fullName>Under_Minimum_Qty__c</fullName>
    <description>Checks tick when quantity at inventory is less than product level minimum quantity</description>
    <formula>( (OnHand_Qty__c + Receivable_Qty__c) - Shipment_Quantity__c )&lt;= Product__r.Min_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Under Minimum Qty</label>
    <type>Checkbox</type>
</CustomField>