force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OnHand_Qty__c</columns>
    <columns>Current_OnHand_Qty__c</columns>
    <columns>Shipment_Quantity__c</columns>
    <columns>Receivable_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>